fixed table overflow issue using mat-grid

--- a/src/app/grid/grid.component.css
+++ b/src/app/grid/grid.component.css
@@ -5,11 +5,22 @@
 }
 
 .cell {
-  background-color: tomato;
   min-width: 0;
-  width: 1rem;
-  height: 1.5rem;
+  width: 100%;
+  height: 100%;
   border-radius: 0;
+}
+
+.blocked {
+  background-color: black;
+}
+
+.source {
+  background-color: chartreuse;
+}
+
+.dest {
+  background-color: crimson;
 }
 
 .grid {
